IE scrollbar fix

--- a/src/styl/layout.styl
+++ b/src/styl/layout.styl
@@ -98,6 +98,9 @@ canvas
 
 .clearfix
 	clear both
+	
+*
+	-ms-overflow-style none
 
 /**
 * Layout
